# urdf-pyvista

./: .gitignore  LICENSE  README.md  pyproject.toml  test_urdf_winder.py  urdf_pyvista.py  urdf_test.py
winder_machine/: winder_machine.urdf
